part_2_configure_ingress/04_testapp-ingress-and-certificate.yaml

# Define an NGINX TLS ingress in the 'testapp' namespace for the 'nginx-svc' service
# Uses the 'selfsigned' cluster issuer we set up earlier
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  namespace: testapp
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/router.tls: "true"
spec:
  # Specifies use of the 'nginx' ingress controller
  ingressClassName: nginx
  rules:

  # Match requests for hostname 'testapp.cluster.mydomain.org' to this ingress service
  - host: testapp.cluster.mydomain.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  tls:
  - hosts:
    - testapp.cluster.mydomain.org
    secretName: testapp-cluster-mydomain-org-tls
